# libopenraw

./: .clang-format  .cvsignore  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Cargo.toml  ChangeLog  ChangeLog-0.0.1  Makefile.am  NEWS  README  RELEASE_NOTES  TODO  autogen.sh  build.rs  configure.ac  configure.in
benches/: the_benchmark.rs
build-aux/: cargo-vendor.sh
dcraw/: .cvsignore  .gitignore  Makefile.am  README  clean_crw.c  dcraw.c,v  decompress.c  fixdates.c  fuji_green.c  fujiturn.c  parse.c  pgm.c
debian/: changelog  control  copyright  libopenraw-dev.install  libopenraw0.install  libopenraw1.install  libopenrawgnome-dev.install  libopenrawgnome0.install  rules
demo/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  ccfa.c  cfa.cpp  extensions.cpp  gdk.c  pixbufload.c  ppmload.c  thumb.c  thumb.cpp  thumbc.c
doc/: Doxyfile  Doxyfile.in  Makefile.am  benchmarks.md  cr3.md  customdoxygen.css  footer.html  fuzz.md  header.html  mainpage.hpp  testsuite.txt
examples/: extensions.rs  orrender.rs
gnome/: Makefile.am  demosaic.cpp  demosaic.h  gdkpixbuf.c  libopenraw-gnome-0.1.pc.in  libopenraw-gnome-0.3.pc.in  libopenraw-gnome-1.0.pc.in  pixbuf-loader.c
gnome/include/: Makefile.am
gnome/include/libopenraw-gnome/: Makefile.am  gdkpixbuf.h
include/: Makefile.am
include/io/: io.h
include/libopenraw/: Makefile.am  bitmapdata.h  cameraids.h  cfapattern.h  consts.h  debug.h  demosaic.h  exif.h  ifd.h  io.h  libopenraw.h  metadata.h  mime.h  mosaicinfo.h  prefix.h  rawdata.h  rawfile.h  thumbnails.h  types.h
include/libopenraw++/: Makefile.am  bitmapdata.h  cfapattern.h  metavalue.h  rawdata.h  rawfile.h  thumbnail.h
include/libopenraw-gnome/: Makefile.am  gdkpixbuf.h
lib/: .cvsignore  CMakeLists.txt  Makefile.am  arwfile.cpp  arwfile.h  arwfile.hpp  bimedian_demosaic.cpp  bimedian_demosaic.h  bititerator.cpp  bititerator.h  bititerator.hpp  bitmapdata.cpp  bitmapdata.hpp  canon.cpp  canon.hpp  cfapattern.cpp  cfapattern.hpp  ciffcontainer.cpp  ciffcontainer.h  ciffcontainer.hpp  cr2.c  cr2.h  cr2file.cpp  cr2file.h  cr2file.hpp  cr3file.cpp  cr3file.hpp  crwdecompressor.cpp  crwdecompressor.h  crwdecompressor.hpp  crwfile.cpp  crwfile.h  crwfile.hpp  dcraw_wrapper.h  debug.cpp  debug.h  decompressor.cpp  decompressor.h  decompressor.hpp  demosaic.cpp  (+137 more)
lib/capi/: Makefile.am  bitmapdata.cpp  capi.cpp  capi.h  cfapattern.cpp  debug.cpp  ifd.cpp  metadata.cpp  mosaicinfo.cpp  rawdata.cpp  rawfile.cpp
lib/ciff/: ciffifd.cpp  ciffifd.hpp  heap.cpp  heap.hpp  recordentry.cpp  recordentry.hpp
lib/exif/: exif-tags.pl  exif_tags-manual.cpp  exif_tags.cpp  exif_tags.hpp
lib/io/: Makefile.am  file.cpp  file.h  file.hpp  io.c  io_private.h  memstream.cpp  memstream.h  memstream.hpp  posix_io.c  posix_io.h  stream.cpp  stream.h  stream.hpp  streamclone.cpp  streamclone.h  streamclone.hpp  testfile.tmp  teststream.cpp
lib/mp4/: Cargo.toml  build-rs.patch  lib.rs  mp4parse-cargo.patch  mp4parse.h  mp4parse_ffi.h  update-rust.sh
lib/mp4/mp4parse/: Cargo.toml  README.md
lib/mp4/mp4parse/src/: boxes.rs  craw.rs  lib.rs  tests.rs
lib/mp4/mp4parse/tests/: public.rs
lib/mp4/mp4parse_capi/: Cargo.toml  build.rs
lib/mp4/mp4parse_capi/src/: lib.rs
lib/render/: bimedian_demosaic.cpp  bimedian_demosaic.h  bimedian_demosaic.hpp  grayscale.cpp  grayscale.h  grayscale.hpp
libopenraw-testing/: Cargo.toml
libopenraw-testing/src/: lib.rs
m4/: boost.m4
misc/: release.sh
python/: INSTALL  setup.py
python/demo/: cfa.py  thumb.py
python/openraw/: __init__.py
python/src/: _openraw.cpp  pythonrawfile.cpp  pythonrawfile.h
python/tests/: _openraw_test.py
rpm/: SLED10.spec
scripts/: webdist.sh
src/: apple.rs  bitmap.rs  camera_ids.rs  canon.rs  capi.rs  colour.rs  container.rs  cr3.rs  decompress.rs  dng.rs  dump.rs  epson.rs  exif.rs  factory.rs  fujifilm.rs  geometry.rs  identify.rs  ifd.rs  io.rs  jpeg.rs  leica.rs  lib.rs  metadata.rs  metavalue.rs  minolta.rs  mosaic.rs  mp4.rs  nikon.rs  olympus.rs  panasonic.rs  pentax.rs  probe.rs  raf.rs  rawdata.rs  rawfile.rs  rawimage.rs  render.rs  ricoh.rs  sigma.rs  sony.rs  (+3 more)
src/canon/: colour.rs  cr2.rs  cr3.rs  crw.rs  matrices.rs
src/canon/crw/: ciff.rs  decompress.rs
src/canon/crw/ciff/: container.rs
src/capi/: bitmap.rs  ifd.rs  iterator.rs  metavalue.rs  mime.rs  mosaic.rs  rawdata.rs  rawfile.rs  thumbnail.rs
src/colour/: matrix.rs
src/decompress/: bit_reader.rs  ljpeg.rs  sliced_buffer.rs  tiled.rs
src/exif/: tags.rs
src/fujifilm/: decompress.rs  matrices.rs  raf.rs
src/ifd/: container.rs  dir.rs  entry.rs  exif.rs  makernote.rs
src/ifd/exif/: tags.rs
src/jpeg/: container.rs
src/metadata/: mod.rs
src/mp4/: container.rs
src/mp4/parse/: boxes.rs  craw.rs  macros.rs  mod.rs  tests.rs  unstable.rs
src/nikon/: diffiterator.rs  huffman.rs  matrices.rs
src/olympus/: decompress.rs  matrices.rs
src/panasonic/: decompress.rs
src/pentax/: decompress.rs
src/render/: demosaic.rs  grayscale.rs
src/tiff/: container.rs  dir.rs  entry.rs  exif.rs  iterator.rs
src/tiff/exif/: generated.rs  tags.rs
test/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  bititerator.t.cpp  ciffcontainertest.cpp  extensions.cpp  fileio.t.c  ljpegtest.cpp  missingcoefficients.cpp  option.t.cpp  testunpack.cpp
testdata/identify/: content_cr2  content_cr3  content_crw  content_mrw  content_raf
tests/: testsuite.rs
testsuite/: Makefile.am  test.xml  test_xmlhandler.cpp  testsuite.cpp  testsuite.h  testsuite.xml  testsuite.xml.overrides  testsuite.xml.overrides.tmpl  testsuitehandler.cpp  testsuitehandler.h  testsuitetags.pl  testsuitetags.txt  xmlhandler.cpp  xmlhandler.h
tools/: .gitignore  Makefile.am  dcparse-convert.pl  dcraw-convert.pl  dumputils.cpp  dumputils.hpp  exif-tags.pl  exif_tags.cpp  exif_tags.hpp  exifdump.cpp  identify.cpp  ordiag.cpp
