[package]
name = "libopenraw"
version = "0.4.0"
edition = "2018"
default-run = "ordiag"

rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = { version = "0.12.4", optional = true }
bitreader = "0.3.6"
byteorder = "1.4.3"
cc = "1.0"
chrono = "0.4.24"
getopts = "0.2.21"
jpeg-decoder = "0.3.0"
lazy_static = "1.4.0"
libc = { version = "*", optional = true }
log = "0.4.14"
mp4parse = { path = "lib/mp4/mp4parse", version = "0.12.0", features = [ "craw" ] }
num_enum = "0.5.9"
once_cell = "1.12.0"
rayon = "1.6.1"
simple_logger = { version = "2.1.0", default-features = false }
thiserror = "1.0.38"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
crc = "2.1.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde-xml-rs = "0.5.1"
criterion = "0.4.0"

[features]
default = ["dump", "bench", "capi"]
bench = []
## Build the C API.
capi = ["libc"]
## Build the dumper
dump = []
## Build fuzzing support
fuzzing = ["afl"]

# For flamegraph
[profile.release]
debug = true

[lib]
bench = false
crate-type = [ "staticlib", "rlib" ]

[[bench]]
name = "the_benchmark"
path = "benches/the_benchmark.rs"
required-features = ["bench"]
harness = false

[[bin]]
name = "ordiag"
test = false
bench = false

[[bin]]
name = "ordump"
required-features = ["dump"]
bench = false

[[bin]]
name = "fuzz-ljpeg"
required-features = ["fuzzing"]
bench = false

[[bin]]
name = "test-ljpeg"
required-features = ["fuzzing"]
bench = false

[[bin]]
name = "fuzz-rawfile"
required-features = ["fuzzing"]
bench = false

[[bin]]
name = "fuzz-olymdecompress"
required-features = ["fuzzing"]
bench = false
