[package]
name = "libopenraw"
version = "0.4.0-alpha.0"
edition = "2018"
default-run = "ordiag"
build = "build.rs"
description = "Digital camera RAW file processing"
repository = "https://gitlab.freedesktop.org/libopenraw/libopenraw"
homepage = "https://libopenraw.freedesktop.org/libopenraw/"
license = "LGPL-3.0-or-later"
keywords = [ "image", "photography", "file_format", "graphics" ]
documentation = "https://docs.rs/crate/libopenraw/"
readme = "README"

rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = { version = "0.12.4", optional = true }
bitreader = "0.3.7"
byteorder = "1.4.3"
cc = "1.0"
chrono = { version = "0.4.26", default-features = false, features = [ "clock" ] }
getopts = "0.2.21"
jpeg-decoder = "0.3.0"
lazy_static = "1.4.0"
libc = { version = "*", optional = true }
log = "0.4.19"
mp4parse = { package = "mp4parse-craw", path = "lib/mp4/mp4parse", version = "0.12.0", features = [ "craw" ] }
nalgebra = "0.32"
num_enum = "0.6.1"
once_cell = "1.18.0"
rayon = "1.7.0"
simple_logger = { version = "4.2.0", default-features = false }
thiserror = "1.0.44"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
crc = "2.1.0"
serde = { version = "^1, <=1.0.171", features = [ "derive" ] }
serde-xml-rs = "^0.6"
criterion = { version = "0.5.1", features = ["html_reports"] }
libopenraw-testing = { path = "libopenraw-testing" }
image = { version = "0.24.6", features = [ "png", "jpeg" ], default-features = false }

[features]
default = ["dump", "bench", "capi"]
bench = []
## Build the C API.
capi = ["libc"]
## Build the dumper
dump = []
## Build fuzzing support
fuzzing = ["afl"]

# For flamegraph
[profile.release]
debug = true

[lib]
name = "openraw"
bench = false
crate-type = [ "staticlib", "rlib" ]

[[bench]]
name = "the_benchmark"
path = "benches/the_benchmark.rs"
required-features = ["bench"]
harness = false

[[bin]]
name = "ordiag"
test = false
bench = false

[[bin]]
name = "ordump"
required-features = ["dump"]
bench = false

[[bin]]
name = "fuzz-ljpeg"
required-features = ["fuzzing"]
bench = false

[[bin]]
name = "test-ljpeg"
required-features = ["fuzzing"]
bench = false

[[bin]]
name = "fuzz-rawfile"
required-features = ["fuzzing"]
bench = false

[[bin]]
name = "fuzz-olymdecompress"
required-features = ["fuzzing"]
bench = false
