[package]
name = "libopenraw"
version = "0.4.0-alpha.7"
edition = "2021"
default-run = "ordiag"
description = "Digital camera RAW file processing"
repository = "https://gitlab.freedesktop.org/libopenraw/libopenraw"
homepage = "https://libopenraw.freedesktop.org/libopenraw/"
license = "LGPL-3.0-or-later"
keywords = [ "image", "photography", "file_format", "graphics" ]
documentation = "https://docs.rs/crate/libopenraw/"
readme = "README"
categories = ["multimedia::images"]

rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = { version = "0.12.4", optional = true }
bitreader = "0.3.7"
byteorder = "1.4.3"
chrono = { version = "0.4.38", default-features = false, features = [ "clock" ] }
fallible_collections = { version = "0.4", features = ["std_io"] }
getopts = "0.2.21"
jpeg-decoder = "0.3.0"
lazy_static = "1.4.0"
libc = { version = "0.2.151", optional = true }
log = "0.4.19"
nalgebra = "0.32"
num_enum = "0.6.1"
num-traits = "0.2.14"
once_cell = "1.18.0"
rayon = "1.8.0"
simple_logger = { version = "5.0.0", default-features = false }
static_assertions = "1.1.0"
thiserror = "1.0.44"
multiversion = "0.7.4"

[dev-dependencies]
crc = "2.1.0"
serde = { version = "^1, <=1.0.171", features = [ "derive" ] }
serde-xml-rs = "^0.6"
criterion = { version = "0.5.1", features = ["html_reports"] }
libopenraw-testing = { path = "libopenraw-testing" }
image = { version = "0.25.1", features = [ "png", "jpeg" ], default-features = false }
test-assembler = "0.1.2"

[features]
default = ["dump", "bench", "capi", "probe"]
probe = []
bench = []
## Build the C API.
capi = ["libc"]
## Build the dumper
dump = []
## Build fuzzing support
fuzzing = ["afl"]
## MP4 module (just to make Rust happy)
3gpp = []
meta-xml = []
missing-pixi-permitted = []
mp4v = []
unstable-api = []

# For flamegraph
[profile.release]
debug = true

[lib]
bench = false
crate-type = [ "staticlib", "rlib" ]

[[bench]]
name = "the_benchmark"
path = "benches/the_benchmark.rs"
required-features = ["bench"]
harness = false

[[bin]]
name = "ordiag"
test = false
bench = false

[[bin]]
name = "ordump"
required-features = ["dump"]
bench = false

[[bin]]
name = "fuzz-ljpeg"
required-features = ["fuzzing"]
bench = false

[[bin]]
name = "test-ljpeg"
required-features = ["fuzzing"]
bench = false

[[bin]]
name = "fuzz-rawfile"
required-features = ["fuzzing"]
bench = false

[[bin]]
name = "fuzz-olymdecompress"
required-features = ["fuzzing"]
bench = false
