dnl libopenraw configure
dnl written by Hubert Figuiere

AC_PREREQ(2.50)
AC_INIT(include/libopenraw/libopenraw.h)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libopenraw, 0.0.1)
AM_MAINTAINER_MODE
AC_LIBTOOL_DLOPEN

AM_CXXFLAGS="-ansi -pedantic -g -Wall -Werror  -Weffc++"
AM_CFLAGS="-pedantic -g -Wall"

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_ARG_WITH(fink,[  --with-fink          add /sw/... to CPP/LDFLAGS (Mac OSX)],[
        if test "x$withval" != "xno"; then
                CPPFLAGS="$CPPFLAGS -I/sw/include"
                LDFLAGS="$LDFLAGS -L/sw/lib"
        fi
])

AC_LANG(C++)
AC_CHECK_HEADER(boost/shared_ptr.hpp, ,
	AC_MSG_ERROR([boost headers not found]))

AC_OUTPUT([
Makefile
include/Makefile
dcraw/Makefile
lib/Makefile
lib/capi/Makefile
lib/io/Makefile
doc/Makefile
doc/Doxyfile
doc/doxygen/Makefile
test/Makefile
demo/Makefile
])
